[tool.poetry]
name = "transcript-service"
version = "0.1.0"
description = ""
authors = ["Vandivier <john@afterecon.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "transcript_service"}]

[tool.poetry.dependencies]
python = "^3.9"
youtube-transcript-api = "^0.5.0"
black = "^23.3.0"
openai = "^0.27.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
